--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -1,5 +1,5 @@
 html {
-  background: url(images/pov.jpg) no-repeat center center fixed;
+  /* background: url("/images/pov.jpg") no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
