Home page updated

--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -1,9 +1,5 @@
 html {
-  /* background: url("/images/pov.jpg") no-repeat center center fixed; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  /* background: url("/images/pov.jpeg") no-repeat center center/cover fixed; */
   box-sizing: border-box;
 }
 body {
