--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -1,40 +1,6 @@
-html {
-  /* background: url(images/pov.jpeg) no-repeat center center/cover fixed; */
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.main-container {
-  /* From https://css.glass */
-  /* margin : 2em 10em; */
-  /* padding: 2rem 10rem; */
-  /* background: rgba(242, 229, 229, 0.19);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4.5px);
-  -webkit-backdrop-filter: blur(4.5px);
-  border: 1px solid rgba(242, 229, 229, 0.02); */
-  text-align: center;
-}
-
+.ngo-container,
 .user-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  padding: 2rem 5rem;
-}
-.ngo-container{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.input-fields {
-  margin: 2rem;
 }
